--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,5 +50,81 @@ body {
     padding: 0px 15px 10px 15px;
     color: #3d3d3d;
 }
+
+.link-topo:hover {
+    border-bottom: 3px solid #6592c9;
+}
 /*End Topo*/
-/*Conteudo*/
+/*Destaque*/
+
+.titulo-site {
+    background-image: url('../assets/img-fundo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.titulo-site-descricao {
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 0 20px;
+    line-height: 60px;
+    background-color: #0a9077b3;
+    text-align: center;
+    color: #ffff;
+}
+
+/*End Destaque*/
+/*Seja Bem vindo*/
+
+.quartos {
+    display: flex;
+    justify-content: space-between;
+}
+
+.quarto {
+   margin-right: 30px; 
+   padding-bottom: 20px;
+   border-bottom: 2px solid #00836a;
+   text-decoration: none;
+   color: #3d3d3d;
+}
+
+.quarto a {
+    text-decoration: none;
+    color: #333;
+}
+
+.quarto a, p {
+    text-align: center;
+}
+
+.quarto:last-child {
+    margin-right: 0px;
+}
+
+.secao-tamanho-maximo {
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+.secao-container {
+    text-align: center;
+    margin-bottom: 50px;
+    padding: 50px;
+}
+
+.secao-container h2{
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+img {
+    width: 100%;
+}
